Fix menu default to open on mobile, symmetry issues

--- a/react-flask-app/src/App.css
+++ b/react-flask-app/src/App.css
@@ -504,7 +504,7 @@ hr {
   .content-single {
     display: flex;
     flex-direction: column;
-    min-width: 320px;
+    min-width: 200px;
     margin: 5% 10%;
     padding: 5% 0% 5% 0%;
   }
